force-app/main/default/objects/Purchase_Order_Recommendation__c/Purchase_Order_Recommendation__c.object-meta.xml
<CustomObject>
    <label>Purchase Order Recommendation</label>
    <nameField>
        <displayFormat>POR - {00000}</displayFormat>
        <label>Purchase Order Recommendation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Order Recommendations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>