force-app/main/default/objects/Purchase_Order_Recommendation__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Dealer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Purchase Order Recommendations</relationshipLabel>
    <relationshipName>Purchase_Order_Recommendations</relationshipName>
    <type>Lookup</type>
</CustomField>